Bugs.txt
1. The coordinates were wrong, which i had patched by setting coords in appendGoti() too...
    But why, did the coords become so earlier? for eg. [6][6] for many/all moves
                                                                     5 |\\\\\\\\\\\\\\\\\|  |  |  |\\\\\\\\\\\\\\\\\|
                                                                   |--------------------------------------------|
                                                                 6 |  |G |  |  |  |  |        |  |  |  |X |  |  |
                                                                   |-----------------|        |-----------------|
                                                                 7 |  |                       |           |  |
                                                                   |-----------------|        |-----------------|
                                                                 8 |  |  |X |  |  |  |        |  |  |  |  |X |  |
                                                                   |--------------------------------------------|
                                                                 9 |\\\\\\\\\\\\\\\\\|  |  |  |\\\\\\\\\\\\\\\\\|
                                                                   |\\----\\\\\----\\|--------|\\----\\\\\----\\|
                                                                 10|\\ R  \\\\\ R  \\|  |  |  |\\    \\\\\    \\|
                                                                   |\\----\\\\\----\\|--------|\\----\\\\\----\\|
                                                                 11|\\\\\\\\\\\\\\\\\|  |  |  |\\\\\\\\\\\\\\\\\|
                                                                   |\\\\\\\\\\\\\\\\\|--------|\\\\\\\\\\\\\\\\\|
                                                                 12|\\\\\\\\\\\\\\\\\|  |  |X |\\\\\\\\\\\\\\\\\|
                                                                   |\\----\\\\\----\\|--------|\\----\\\\\----\\|
                                                                 13|\\ R  \\\\\ R  \\|X |  |  |\\    \\\\\    \\|
                                                                   |\\----\\\\\----\\|--------|\\----\\\\\----\\|
                                                                 14|\\\\\\\\\\\\\\\\\|  |  |  |\\\\\\\\\\\\\\\\\|
                                                                   ----------------------------------------------

                                                                                  Gupta                                                                                  
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------

Chose from these gotis : 1. [6][6]

Roll Output - 1 
Enter GotiNumber and dieNumber : 1 1
Removing from [6][1]
Adding to [6][2]
0Going to print for Player:1 Colour:1

///////////////////////////////////////////////////////
includes/board.cpp: In lambda function:
includes/board.cpp:752:5: error: inconsistent deduction for ‘auto’: ‘short unsigned int’ and then ‘int’
     auto tmpSum = chosenRoll, tmp2 = 0;
     ^~~~
includes/board.cpp:758:6: error: expected primary-expression before ‘}’ token
      }
///////////////////////////////////////////////////////


///////////////////////////////////////////////////////
Including a namespace twice, gives 'Multiple Defintions' linker error, to solve this the methods may be made 'static'
///////////////////////////////////////////////////////

Just a note for self to recall the learning experience - 
**And there are at least 25 (approx.) significant bugs, library errors during these, about 10 MAY have been patched yesterday(20May)